getting rid of extra build summary, added in the enum for status, updated postgres calls
