# router/admin/summary.go
@@ -3,7 +3,6 @@ package admin
 import (
 	"context"
 
-	"github.com/golang/protobuf/ptypes/timestamp"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
 
@@ -26,18 +25,7 @@ func (g *guideOcelotServer) LastFewSummaries(ctx context.Context, repoAct *pb.Re
 		return nil, status.Error(codes.NotFound, "no entries found")
 	}
 	for _, model := range modelz {
-		summary := &pb.BuildSummary{
-			Hash:          model.Hash,
-			Failed:        model.Failed,
-			BuildTime:     &timestamp.Timestamp{Seconds: model.BuildTime.UTC().Unix()},
-			QueueTime:     &timestamp.Timestamp{Seconds: model.QueueTime.UTC().Unix()},
-			Account:       model.Account,
-			BuildDuration: model.BuildDuration,
-			Repo:          model.Repo,
-			Branch:        model.Branch,
-			BuildId:       model.BuildId,
-		}
-		summaries.Sums = append(summaries.Sums, summary)
+		summaries.Sums = append(summaries.Sums, model)
 	}
 	//fmt.Println(summaries)
 	return summaries, nil
